--- a/app/src/main/res/layout/fragment_restaurants_list__client.xml
+++ b/app/src/main/res/layout/fragment_restaurants_list__client.xml
@@ -44,5 +44,16 @@
             tools:listitem="@layout/card_restaurant" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    <TextView
+        android:id="@+id/textview_no_result_restaurants_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/title"
+        android:text="@string/no_element"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_view_fragment_favourite"
+        app:layout_constraintVertical_bias=".1"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
