--- a/app/src/main/res/layout-land/fragment_restaurants_list__client.xml
+++ b/app/src/main/res/layout-land/fragment_restaurants_list__client.xml
@@ -42,11 +42,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintHorizontal_bias=".5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias=".9"
+        app:layout_constraintStart_toEndOf="@+id/search_view_fragment_favourite"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintWidth_percent=".4" />
+        app:layout_constraintVertical_bias="0.009"
+        app:layout_constraintWidth_percent=".2" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_fragment_favourite"
