--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,6 +90,52 @@
 
     </style>
 
+    <style name="button_style_allcategory_not_selected" parent="Widget.MaterialComponents.Button.OutlinedButton" >
+        <!--<item name="android:background">@drawable/button_primary_background</item>-->
+        <!--<item name="android:textColor">@drawable/button_primary_textcolor</item>-->
+        <item name="android:backgroundTint">@color/grey</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
+        <item name="android:textColor">@color/white</item>
+
+        <item name="android:padding">@dimen/padding_button</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+
+
+    </style>
+
+    <style name="button_style_category_not_selected" parent="Widget.MaterialComponents.Button.OutlinedButton" >
+        <!--<item name="android:background">@drawable/button_primary_background</item>-->
+        <!--<item name="android:textColor">@drawable/button_primary_textcolor</item>-->
+        <item name="android:backgroundTint">@color/grey</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">@dimen/text_size_mini</item>
+        <item name="android:textColor">@color/white</item>
+
+        <item name="android:padding">@dimen/padding_button</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+    </style>
+
+    <style name="button_style_category_selected" parent="Widget.MaterialComponents.Button.OutlinedButton" >
+        <!--<item name="android:background">@drawable/button_primary_background</item>-->
+        <!--<item name="android:textColor">@drawable/button_primary_textcolor</item>-->
+        <item name="android:backgroundTint">@color/red</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+        <item name="android:textColor">@color/white</item>
+
+        <item name="android:padding">@dimen/padding_button</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+
+
+    </style>
+
 
     <style name="main_button_style_direction" parent="Widget.MaterialComponents.Button">
         <!--<item name="android:background">@drawable/button_primary_background</item>-->
