--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".restaurant.Activity_Favourites">
+    tools:context=".restaurant.Activity_Favorites">
     <fragment
         android:id="@+id/fragment_restaurants_list_favourite"
         android:name="com.poma.restaurant.restaurant.Fragment_Favourites"
