--- a/app/src/main/res/layout/fragment_edit_restaurant_time.xml
+++ b/app/src/main/res/layout/fragment_edit_restaurant_time.xml
@@ -57,9 +57,7 @@
             app:layout_constraintVertical_bias=".05"
             app:layout_constraintHorizontal_bias=".5"
 
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+
 
             android:visibility="visible"
             android:text="@string/days_of_the_week"
@@ -352,7 +350,7 @@
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_edit_time"
+            android:id="@+id/btn_save_time"
             style="@style/main_button_style"
             android:layout_width="0dp"
 
