--- a/app/src/main/res/menu/menu_admin.xml
+++ b/app/src/main/res/menu/menu_admin.xml
@@ -28,7 +28,7 @@
             android:icon="@drawable/ic_baseline_logout_24"
             android:title="Logout" />
         <item
-            android:id="@+id/nav_user_test"
+            android:id="@+id/nav_admin_test"
             android:title="Test" />
     </group>
 </menu>
